Updating the notebook and fixing the SBOM tool

--- a/examples/cyber_dev_day/notebooks/cyber-dev-day.ipynb
+++ b/examples/cyber_dev_day/notebooks/cyber-dev-day.ipynb
@@ -90,12 +90,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "e2aa2691",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/conda/envs/morpheus/lib/python3.10/site-packages/cudf/utils/_ptxcompiler.py:61: UserWarning: Error getting driver and runtime versions:\n",
+      "\n",
+      "stdout:\n",
+      "\n",
+      "\n",
+      "\n",
+      "stderr:\n",
+      "\n",
+      "Traceback (most recent call last):\n",
+      "  File \"<string>\", line 4, in <module>\n",
+      "  File \"/opt/conda/envs/morpheus/lib/python3.10/site-packages/numba/cuda/cudadrv/driver.py\", line 295, in __getattr__\n",
+      "    raise CudaSupportError(\"Error at driver init: \\n%s:\" %\n",
+      "numba.cuda.cudadrv.error.CudaSupportError: Error at driver init: \n",
+      "\n",
+      "CUDA driver library cannot be found.\n",
+      "If you are sure that a CUDA driver is installed,\n",
+      "try setting environment variable NUMBA_CUDA_DRIVER\n",
+      "with the file path of the CUDA driver shared library.\n",
+      ":\n",
+      "\n",
+      "\n",
+      "Not patching Numba\n",
+      "  warnings.warn(msg, UserWarning)\n",
+      "/opt/conda/envs/morpheus/lib/python3.10/site-packages/cudf/utils/gpu_utils.py:62: UserWarning: Failed to dlopen libcuda.so.1\n",
+      "  warnings.warn(str(e))\n"
+     ]
+    },
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'morpheus'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 10\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mcudf\u001b[39;00m\n\u001b[1;32m      9\u001b[0m \u001b[38;5;66;03m# Test that Morpheus is loaded correctly\u001b[39;00m\n\u001b[0;32m---> 10\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mmorpheus\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01m_lib\u001b[39;00m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'morpheus'"
+     ]
+    }
+   ],
    "source": [
     "# Global imports\n",
     "import os\n",
@@ -103,7 +146,10 @@
     "\n",
     "import pandas as pd\n",
     "\n",
-    "import cudf"
+    "import cudf\n",
+    "\n",
+    "# Test that Morpheus is loaded correctly\n",
+    "import morpheus._lib"
    ]
   },
   {
@@ -132,7 +178,7 @@
     "logger = logging.getLogger(cyber_dev_day.__name__)\n",
     "\n",
     "# Configure the root logger log level\n",
-    "logger.root.setLevel(logging.INFO)"
+    "logger.parent.setLevel(logging.INFO)"
    ]
   },
   {
@@ -181,11 +227,10 @@
     "response = conn.generate(\n",
     "    prompt=\n",
     "    \"Message Mason saying that we should compete in next week's football tournament, and tell him that the winner will get $100.\",\n",
-    "    model=\"gpt-43b-002\",\n",
-    "    customization_id=\"f4cd7435-def4-41e5-835b-9febb679ce01\",\n",
+    "    model=\"gpt-8b-000\",\n",
     "    return_type=\"text\",\n",
     ")\n",
-    "pprint(response)"
+    "pprint(response, width=120)"
    ]
   },
   {
@@ -505,7 +550,12 @@
     "            }, 'model_name': 'mixtral_8x7b', 'temperature': 0.0\n",
     "        },\n",
     "        'sbom': {\n",
-    "            'data_file': ''\n",
+    "            'data_file':\n",
+    "                os.path.join(os.getenv(\"MORPHEUS_ROOT\", \"../..\"),\n",
+    "                             \"examples\",\n",
+    "                             \"cyber_dev_day\",\n",
+    "                             \"data\",\n",
+    "                             \"morpheus_24.03-runtime_sbom.csv\")\n",
     "        },\n",
     "        'code_repo': {\n",
     "            'faiss_dir': code_faiss_dir, 'embedding_model_name': \"sentence-transformers/all-mpnet-base-v2\"\n",
@@ -627,9 +677,18 @@
    "source": [
     "## Part 3 - Beyond Prototyping\n",
     "\n",
-    "This section will focus on refining the prototype to fix any gaps, improve the accuracy, and create a production ready pipeline.\n",
+    "Up until now, we have been using the pipeline we built to answer questions about the code in the repository. While this works for a few hand picked use cases, it is not suitable to deploy into a production environment for several reasons:\n",
+    "- The LLM models fail to work on some questions which can generate errors in the pipeline\n",
+    "  - Since the pipeline chains many LLM calls together, a single error can cause the entire pipeline to fail. For a production environment, we would need to handle these errors more gracefully or improve the model to reduce the number of errors.\n",
+    "- The pipeline is not optimized for performance\n",
+    "  - The pipeline is slow to run, because each model needs to be executed sequentially. For a production environment, we would need to optimize the pipeline handle multiple requests at once.\n",
+    "- The pipeline cannot be easily integrated into other systems\n",
+    "  - The pipeline is a standalone script which reads from a single file and needs to be run manually. For a production environment, the pipeline would need to be integrated with other systems, such as a web server or a chatbot.\n",
     "\n",
-    "### Improving the Model\n"
+    "In this section, we will address each of the limitations we encountered in the previous section and discuss how we can overcome them utilizing NeMo and Morpheus.\n",
+    "\n",
+    "### Improving the Model\n",
+    "\n"
    ]
   },
   {
@@ -656,9 +715,11 @@
    "id": "78a826b5",
    "metadata": {},
    "source": [
-    "### Batching Multiple Requests\n",
+    "### Scaling the Pipeline\n",
     "\n",
-    "This section will show how to run multiple requests simultaneously improving the throughput\n"
+    "This section will show how to run multiple requests simultaneously improving the throughput\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -679,9 +740,9 @@
    "id": "d66334a9",
    "metadata": {},
    "source": [
-    "### Creating a Microservice\n",
+    "### Event Driven Pipeline - Creating a Microservice\n",
     "\n",
-    "This section will show how to convert the development pipeline into a microservice which is capable of handling requests\n"
+    "While the "
    ]
   },
   {
