Improving the notebook and adding diagrams

--- a/examples/cyber_dev_day/notebooks/cyber-dev-day.ipynb
+++ b/examples/cyber_dev_day/notebooks/cyber-dev-day.ipynb
@@ -32,13 +32,14 @@
     "  - [1.5 - Few-Shot Learning](#1.5---Few-Shot-Learning)\n",
     "  - [1.6 - Evaluation Strategies](#1.6---Evaluation-Strategies)\n",
     "- [2 - Prototyping](#2---Prototyping)\n",
-    "  - 2.1 Building a Vector Database\n",
-    "  - 2.2. Running a RAG pipeline with Morpheus\n",
-    "  - 2.3 Running the CVE Pipeline with Morpheus\n",
+    "  - [2.1 - Overview](#21---overview)\n",
+    "  - [2.2 - Building the Vector Database](#22---building-the-vector-database)\n",
+    "  - [2.3 - Running a RAG pipeline with Morpheus](#23---running-a-rag-pipeline-with-morpheus)\n",
+    "  - [2.4 - Running the CVE Pipeline with Morpheus](#24---running-the-cve-pipeline-with-morpheus)\n",
     "- [3 - Beyond Prototyping](#3---Beyond-Prototyping)\n",
-    "  - 3.1 Improving the Model\n",
-    "  - 3.2 Batching Requests\n",
-    "  - 3.3 Creating a Microservice\n",
+    "  - [3.1 - Improving the Model](#31---improving-the-model)\n",
+    "  - [3.2 - Scaling the Pipeline](#32---scaling-the-pipeline)\n",
+    "  - [3.3 - Event Driven Pipeline: Creating a Microservice](#33---event-driven-pipeline-creating-a-microservice)\n",
     "\n",
     "<div class=\"alert alert-block alert-info\">\n",
     "<b>Note:</b> Please continue running the notebook up to Part 1 during the introduction presentation to ensure your environment is set up correctly.\n",
@@ -150,6 +151,7 @@
    "source": [
     "import logging\n",
     "import os\n",
+    "import time\n",
     "from textwrap import wrap\n",
     "\n",
     "import pandas as pd\n",
@@ -227,7 +229,7 @@
    "source": [
     "## 1 - Intro to Interacting with LLMs\n",
     "\n",
-    "This section will go over how to integrate LLMs into code with Python based examples. We will highlight some of the basic techniques for using and imporving calls to LLMs for our cybersecurity use cases.\n",
+    "This section will go over how to integrate LLMs into code with Python based examples. We will highlight some of the basic techniques for using and improving calls to LLMs for cybersecurity use cases.\n",
     "\n",
     "1. Python calls to LLM API\n",
     "2. Prompt engineering\n",
@@ -239,7 +241,7 @@
     "\n",
     "To simplify the process of interacting with the NeMo service, the NeMo team provides a Python client library (`nemollm`) that wraps the HTTP API. This library provides a simple interface for making requests to the NeMo service, and handles the details of making HTTP requests and parsing the responses. This allows us to focus on the high-level logic of our application, rather than the low-level details of making HTTP requests.\n",
     "\n",
-    "Before sending requests to the NeMo service, we need to set up a NeMo connection object, `conn` which is shown below. We will use the `generate` method of the connection object to send requests to the NeMo service for the remainder of this section.\n"
+    "Before sending requests to the NeMo service, we need to set up a NeMo connection object, `conn` which is shown below. We will use the `generate()` method of the connection object to send requests to the NeMo service for the remainder of this section.\n"
    ]
   },
   {
@@ -298,7 +300,7 @@
    "source": [
     "#### 1.1.1 - Explore On Your Own: Different Models\n",
     "\n",
-    "Try another model such as `gpt-8b-000` `gpt20b` or `llama2-70b-HF`\n"
+    "Try another model such as `gpt-8b-000` `gpt20b` or `llama-2-70b-hf`\n"
    ]
   },
   {
@@ -310,9 +312,10 @@
    },
    "outputs": [],
    "source": [
+    "# TODO: Do we remove the filled out section here?\n",
     "conn.generate(\n",
     "    prompt=\"In general, how can I determine if my specific environment is affected by a CVE?\",\n",
-    "    model=\"gpt-8b-000\",\n",
+    "    model=\"gpt-43b-002\",\n",
     "    tokens_to_generate=128,\n",
     "    temperature=0,\n",
     "    return_type=\"text\",\n",
@@ -324,7 +327,7 @@
    "id": "6ffff783-1e41-46cb-a819-e9fb96252d31",
    "metadata": {},
    "source": [
-    "#### 1.1.2 - Explore On Your Own: Different Models\n",
+    "#### 1.1.2 - Explore On Your Own: Model Parameters\n",
     "\n",
     "How do the different models compare? Can you change the parameters (like `temperature` or `repetition_penalty`) to help the smaller models improve?\n",
     "\n",
@@ -342,7 +345,7 @@
    "source": [
     "### 1.2 - Prompt Engineering\n",
     "\n",
-    "Some tips for improving performance using prompt engineering can be found here https://www.promptingguide.ai/introduction/tips\n",
+    "Some tips for improving performance using prompt engineering can be found here https://www.promptingguide.ai/introduction/tips.\n",
     "\n",
     "<dl>\n",
     "<dt><b>Use Case</b></dt>\n",
@@ -769,7 +772,7 @@
     "tags": []
    },
    "source": [
-    "### 1.5 Few-Shot Learning\n",
+    "### - 1.5 Few-Shot Learning\n",
     "\n",
     "Including multiple diverse examples in the prompt can improve performance\n"
    ]
@@ -959,6 +962,8 @@
    "source": [
     "from cyber_dev_day.embeddings import create_code_embedding\n",
     "from langchain.embeddings.huggingface import HuggingFaceEmbeddings\n",
+    "from langchain_nvidia_ai_endpoints import NVIDIAEmbeddings\n",
+    "from langchain_nvidia_ai_endpoints._common import NVEModel\n",
     "\n",
     "# Create the embedding object that will be used to generate the embeddings\n",
     "embeddings = HuggingFaceEmbeddings(model_name=\"sentence-transformers/all-mpnet-base-v2\",\n",
@@ -1237,7 +1242,7 @@
     "\n",
     "    logger.info(\"Pipeline complete\")\n",
     "\n",
-    "    print(\"Pipeline complete. Received %s responses:\\n%s\" % (len(messages), responses['response']))"
+    "    logger.info(\"Pipeline complete. Received %s responses:\\n%s\", len(messages), responses['response'])"
    ]
   },
   {
@@ -1543,9 +1548,9 @@
     "model_output = conn.generate(\n",
     "    prompt=formatted_prompt,\n",
     "    model=\"gpt-43b-002-lora\",\n",
-    "    customization_id=\"96d79918-f5a8-47c0-8b0e-b87295e51b64\",  # PLACEHOLDER\n",
+    "    # customization_id=\"96d79918-f5a8-47c0-8b0e-b87295e51b64\",  # PLACEHOLDER\n",
     "    tokens_to_generate=800,\n",
-    "    temperature=0,\n",
+    "    temperature=0.001,\n",
     "    return_type=\"text\",\n",
     ")\n",
     "\n",
@@ -1578,7 +1583,21 @@
    "source": [
     "### 3.2 - Scaling the Pipeline\n",
     "\n",
-    "This section will show how to run multiple requests simultaneously improving the throughput\n"
+    "When running pipelines which utilize LLMs, it's important to understand how the LLMs are executed to parallelize their execution as much as possible. This is because LLMs can take a long time to run, as low as a few hundred milliseconds and upwards of a few seconds. Running LLMs serially can compound those runtimes leading to execution times that grow linearly with the number of LLM requests. A simple diagram of the execution of LLMs for our CVE pipeline is shown below:\n",
+    "\n",
+    "![Single CVE - Serial](./images/single_cve_serial.jpg)\n",
+    "\n",
+    "In the diagram above, we can see that the LLMs are executed serially, one after the other. This is not ideal as the execution time of the pipeline is directly proportional to the number of LLMs that are executed. However, there is no dependency between the LLM calls in each of checklist items. This means that we can parallelize the execution of the LLMs to reduce the overall execution time of the pipeline. A simple diagram of the parallel execution of LLMs for our CVE pipeline is shown below:\n",
+    "\n",
+    "![Single CVE - Parallel](./images/single_cve_parallel.jpg)\n",
+    "\n",
+    "In the diagram above, we can see that the total execution time has been reduced as the checklist agent LLMs are executed in parallel. The total execution time is now the maximum time taken to execute any of the LLM agent chains. This is a significant improvement over the serial execution of the LLMs. But what happens if we need to run the entire pipeline for multiple CVEs? A naive approach would be to run the pipeline for each CVE serially, which is shown below:\n",
+    "\n",
+    "![Multiple CVE - Serial](./images/multiple_cve_serial.jpg)\n",
+    "\n",
+    "With most LLM libraries, this is the default behavior and improving on this requires more complex solutions such as multiprocessing or distributed workers. However, with Morpheus, this is trivial since Morpheus benefits from pipeline parallelism where each message is processed in an assembly line fashion. This means that we can start processing the next message before the previous one is even completed. A simple diagram of the parallel execution of the pipeline for multiple CVEs is shown below:\n",
+    "\n",
+    "![Multiple CVE - Parallel](./images/multiple_cve_parallel.jpg)\n"
    ]
   },
   {
@@ -1588,10 +1607,112 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Code for batching multiple requets\n",
-    "await run_cve_pipeline(pipeline_config, engine_config_custom_model, [\n",
-    "    \"An issue was discovered in the Linux kernel through 6.0.9. drivers/media/dvb-core/dvbdev.c has a use-after-free, related to dvb_register_device dynamically allocating fops.\"\n",
-    "] * 5)"
+    "# Create multiple CVE requests\n",
+    "cves = [\n",
+    "    (\"An issue was discovered in the Linux kernel through 6.0.9. drivers/media/dvb-core/dvbdev.c has a use-after-free, \"\n",
+    "     \"related to dvb_register_device dynamically allocating fops.\"),\n",
+    "     (\"An issue was discovered in the Linux kernel through 6.0.9. drivers/media/dvb-core/dvbdev.c has a use-after-free, \"\n",
+    "     \"related to dvb_register_device dynamically allocating fops.\"),\n",
+    "     (\"An issue was discovered in the Linux kernel through 6.0.9. drivers/media/dvb-core/dvbdev.c has a use-after-free, \"\n",
+    "     \"related to dvb_register_device dynamically allocating fops.\"),\n",
+    "     (\"An issue was discovered in the Linux kernel through 6.0.9. drivers/media/dvb-core/dvbdev.c has a use-after-free, \"\n",
+    "     \"related to dvb_register_device dynamically allocating fops.\"),\n",
+    "     (\"An issue was discovered in the Linux kernel through 6.0.9. drivers/media/dvb-core/dvbdev.c has a use-after-free, \"\n",
+    "     \"related to dvb_register_device dynamically allocating fops.\")\n",
+    "]\n",
+    "\n",
+    "await run_cve_pipeline(pipeline_config, engine_config_custom_model, cves)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c266d439",
+   "metadata": {},
+   "source": [
+    "If you look at the above output, you should see a section that looks like the following:\n",
+    "\n",
+    "```\n",
+    "> Entering new AgentExecutor chain...\n",
+    "\n",
+    "> Entering new AgentExecutor chain...\n",
+    "\n",
+    "> Entering new AgentExecutor chain...\n",
+    "\n",
+    "> Entering new AgentExecutor chain...\n",
+    "\n",
+    "> Entering new AgentExecutor chain...\n",
+    "```\n",
+    "\n",
+    "Because each executor chain is being started before the previous one completes, they are all running in parallel. But can we verify that this is actually leading to a performance improvement? Let's run the pipeline for a single CVE and multiple CVEs and compare their execution time.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b1f51590",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from morpheus.utils.logging_timer import log_time\n",
+    "\n",
+    "# Update the agent config to disable verbose logging\n",
+    "non_verbose_config = engine_config_custom_model.model_copy(deep=True)\n",
+    "non_verbose_config.agent.verbose = False\n",
+    "\n",
+    "# Disable the logger to make it easer to see the timings\n",
+    "saved_level = logger.parent.level\n",
+    "logger.parent.setLevel(logging.ERROR)\n",
+    "\n",
+    "execution_times: dict[int, float] = {}\n",
+    "\n",
+    "for count in [1, 5, 10]:\n",
+    "\n",
+    "    start_time = time.time()\n",
+    "\n",
+    "    with log_time(print, count=count, msg=\"Executing {count} CVE(s). Total: {duration} ms, Average: {ms_per_count} ms\"):\n",
+    "        await run_cve_pipeline(pipeline_config, non_verbose_config, [cves[0]])\n",
+    "\n",
+    "    execution_times[count] = time.time() - start_time\n",
+    "\n",
+    "logger.parent.setLevel(saved_level)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "138ebec5",
+   "metadata": {},
+   "source": [
+    "Your actual execution time may differ, but it should look something like the following:\n",
+    "\n",
+    "```\n",
+    "Executing 1 CVE(s). Total: 6047.4913120269775 ms, Average: 6047.4913120269775 ms\n",
+    "Executing 5 CVE(s). Total: 5316.500663757324 ms, Average: 1063.3001327514648 ms\n",
+    "Executing 10 CVE(s). Total: 5708.996534347534 ms, Average: 570.8996534347534 ms\n",
+    "```\n",
+    "\n",
+    "As you can see, the total execution time for the pipeline for multiple CVEs is close to the total execution time for the pipeline for a single CVE. To get an idea of how well the pipeline scales, we can make a plot of the CVE count vs runtimes for the pipeline.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e84b6723",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# importing matplotlib module\n",
+    "from matplotlib import pyplot as plt\n",
+    "\n",
+    "# Function to plot\n",
+    "plt.plot(execution_times.keys(),\n",
+    "         list(\n",
+    "             zip(execution_times.values(), [execution_times[1] * x for x in execution_times.keys()],\n",
+    "                 [execution_times[1] for _ in execution_times.keys()])),\n",
+    "         label=[\"actual\", \"serial\", \"parallel\"])\n",
+    "plt.legend()\n",
+    "\n",
+    "# function to show the plot\n",
+    "plt.show()"
    ]
   },
   {
@@ -1601,7 +1722,13 @@
    "source": [
     "### 3.3 - Event Driven Pipeline: Creating a Microservice\n",
     "\n",
-    "This section will show how to convert the development pipeline into a microservice which is capable of handling requests\n"
+    "In a true production environment, the CVE scans would be triggered by some other event, such as a new container being uploaded into a registry or a new project being created. In this section, we will show how to create a microservice that can be triggered by an event and run the pipeline we built in the previous sections.\n",
+    "\n",
+    "Previously, when our pipeline was started, it would read all inputs from a DataFrame and run the pipeline for each input. Once the pipeline was done processing the DataFrame, it would shutdown. To run the pipeline as a microservice, we need to modify the pipeline to run continuously and listen for new inputs on an HTTP endpoint.\n",
+    "\n",
+    "Fortunately, in Morpheus this is as easy as changing out the type of source that is used in the pipeline. The code below is identical to the previous pipeline except we have changed the source from `InMemorySourceStage` to `HttpServerSourceStage`. The `HttpServerSourceStage` class listens for new inputs on an HTTP endpoint and passes them to the next stage in the pipeline. It pulls the inputs from the request body and passes them to the pipeline to be processed.\n",
+    "\n",
+    "Additionally, right after the `HttpServerSourceStage` we have added a simple custom stage to the pipeline `print_payload`. This custom stage simply prints the payload that was passed to the pipeline. This is useful for debugging and seeing exactly when the pipeline was triggered since the results may take time to process and be shown to the console.\n"
    ]
   },
   {
@@ -1632,12 +1759,13 @@
     "\n",
     "    pipe = LinearPipeline(p_config)\n",
     "\n",
-    "    # expected payload is:\n",
+    "    # Use an HTTP source to listed for requests. The expected payload is:\n",
     "    # [{\"cve_info\": <sting>},\n",
     "    #  {\"cve_info\": <sting>},]\n",
     "    pipe.set_source(\n",
     "        HttpServerSourceStage(p_config, bind_address=\"0.0.0.0\", port=26302, endpoint=\"/scan\", method=HTTPMethod.POST))\n",
     "\n",
+    "    # To see when our pipeline has been triggered, add a simple logging stage to print the payload\n",
     "    @stage\n",
     "    def print_payload(payload: MessageMeta) -> MessageMeta:\n",
     "        serialized_str = payload.df.to_json(orient='records', lines=True)\n",
@@ -1648,6 +1776,7 @@
     "\n",
     "    pipe.add_stage(print_payload(config=p_config))\n",
     "\n",
+    "    # The remaineder of the pipeline is identical to the previous example\n",
     "    pipe.add_stage(\n",
     "        DeserializeStage(p_config, message_type=ControlMessage, task_type=\"llm_engine\", task_payload=completion_task))\n",
     "\n",
@@ -1662,7 +1791,19 @@
     "\n",
     "    logger.info(\"Pipeline complete\")\n",
     "\n",
-    "    print(\"Pipeline complete. Received %s responses:\\n%s\" % (len(messages), responses['response']))"
+    "    logger.info(\"Pipeline complete. Received %s responses:\\n%s\", len(messages), responses['response'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ababebfe",
+   "metadata": {},
+   "source": [
+    "Finally, we can start our microservice by running the pipeline as we have in the past. While the pipeline is running, move on to the next section to see how to trigger the pipeline with an HTTP request.\n",
+    "\n",
+    "<div class=\"alert alert-block alert-warning\">\n",
+    "<b>Note:</b> When executed, the following cell will run indefinitely. You will need to interrupt the kernel to stop it. \n",
+    "</div>\n"
    ]
   },
   {
