--- a/examples/cyber_dev_day/notebooks/cyber-dev-day.ipynb
+++ b/examples/cyber_dev_day/notebooks/cyber-dev-day.ipynb
@@ -9,8 +9,7 @@
     "\n",
     "## Introduction\n",
     "\n",
-    "Generative AI (GenAI) and Large Language Models (LLMs) are becoming essential tools in cybersecurity in part due to their ability to enhance the efficiency of cyber threat detection and response by accelerating analyst workflows. Prototyping and moving theses accelerated workflows into production can be daunting\n",
-    "Cybersecurity remains among the top three challenges impacting every industry—from the public sector to financial services, telecommunications, retail, automotive, and more. Most CEOs believe organizations with the most advanced generative AI capabilities will have a competitive advantage and are looking for ways to incorporate this into their business. Adversaries are already using generative AI in their attacks, however, and much more can be done to harness this power for cyberdefense. This hands-on tutorial will focus on accelerating an exploitability analysis workflow to increase analyst productivity and enhance cybersecurity defenses.\n",
+    "Generative AI (GenAI) and Large Language Models (LLMs) are becoming essential tools in cybersecurity in part due to their ability to enhance the efficiency of cyber threat detection and response by accelerating analyst workflows. Prototyping and moving theses accelerated workflows into production can be daunting. Cybersecurity remains among the top three challenges impacting every industry—from the public sector to financial services, telecommunications, retail, automotive, and more. Most CEOs believe organizations with the most advanced generative AI capabilities will have a competitive advantage and are looking for ways to incorporate this into their business. Adversaries are already using generative AI in their attacks, however, and much more can be done to harness this power for cyberdefense. This hands-on tutorial will focus on accelerating an exploitability analysis workflow to increase analyst productivity and enhance cybersecurity defenses.\n",
     "\n",
     "### Problem Statement\n",
     "\n",
@@ -152,7 +151,6 @@
     "import logging\n",
     "import os\n",
     "import time\n",
-    "from textwrap import wrap\n",
     "\n",
     "import pandas as pd\n",
     "from nemollm.api import NemoLLM\n",
@@ -622,12 +620,10 @@
     "Example CVE Details:\n",
     "\n",
     "- CVE ID: CVE-2022-2309\n",
-    "- Description: NULL Pointer Dereference allows attackers to cause a denial of service (or application crash). This only applies when lxml up to version 4.9.1 \\\n",
-    "  is used together with libxml2 2.9.10 through 2.9.14. libxml2 2.9.9 and earlier are not affected. It allows triggering crashes through forged input data, given a\n",
+    "- Description: NULL Pointer Dereference allows attackers to cause a denial of service (or application crash). This only applies when lxml up to version 4.9.1 is used together with libxml2 2.9.10 through 2.9.14. libxml2 2.9.9 and earlier are not affected. It allows triggering crashes through forged input data, given a\n",
     "  vulnerable code sequence in the application. The vulnerability is caused by the iterwalk function (also used by the canonicalize function). Such code shouldn't be\n",
-    "  in wide-spread use, given that parsing + iterwalk would usually be replaced with the more efficient iterparse function. However, an XML converter that serialises to \\\n",
-    "  C14N would also be vulnerable, for example, and there are legitimate use cases for this code sequence. If untrusted input is received (also remotely) and processed via \\\n",
-    "  iterwalk function, a crash can be triggered.\n",
+    "  in wide-spread use, given that parsing + iterwalk would usually be replaced with the more efficient iterparse function. However, an XML converter that serialises to \n",
+    "  C14N would also be vulnerable, for example, and there are legitimate use cases for this code sequence. If untrusted input is received (also remotely) and processed via iterwalk function, a crash can be triggered.\n",
     "- Vulnerable Package Name: lxml, libxml2\n",
     "- Vulnerable Package Version: lxml: up to 4.9.1, libxml2: 2.91.0 through 2.9.14\n",
     "- CVSS3 Vector String: CVSS:3.1/AV:N/AC:L/PR:N/UI:N/S:U/C:N/I:N/A:H\n",
