Remove trailing slashes

--- a/examples/cyber_dev_day/notebooks/cyber-dev-day.ipynb
+++ b/examples/cyber_dev_day/notebooks/cyber-dev-day.ipynb
@@ -650,9 +650,9 @@
     "\n",
     "**CVE Details:**\n",
     "\n",
-    "- CVE ID: {cve} \\\n",
-    "- Description: {cve_description} \\\n",
-    "- Vulnerable Package Name: {vuln_package} \\\n",
+    "- CVE ID: {cve}\n",
+    "- Description: {cve_description}\n",
+    "- Vulnerable Package Name: {vuln_package}\n",
     "- CVSS3 Vector String: {cvss3}\"\n",
     "\n",
     "**Checklist**:\n"
