--- a/examples/cyber_dev_day/notebooks/cyber-dev-day.ipynb
+++ b/examples/cyber_dev_day/notebooks/cyber-dev-day.ipynb
@@ -772,7 +772,7 @@
     "tags": []
    },
    "source": [
-    "### - 1.5 Few-Shot Learning\n",
+    "### 1.5 - Few-Shot Learning\n",
     "\n",
     "Including multiple diverse examples in the prompt can improve performance\n"
    ]
@@ -962,8 +962,6 @@
    "source": [
     "from cyber_dev_day.embeddings import create_code_embedding\n",
     "from langchain.embeddings.huggingface import HuggingFaceEmbeddings\n",
-    "from langchain_nvidia_ai_endpoints import NVIDIAEmbeddings\n",
-    "from langchain_nvidia_ai_endpoints._common import NVEModel\n",
     "\n",
     "# Create the embedding object that will be used to generate the embeddings\n",
     "embeddings = HuggingFaceEmbeddings(model_name=\"sentence-transformers/all-mpnet-base-v2\",\n",
@@ -989,6 +987,10 @@
    "id": "eb0cd628",
    "metadata": {},
    "source": [
+    "<div class=\"alert alert-block alert-warning\">\n",
+    "<b>Note:</b> Please wait here until instructed to continue with running the notebook.\n",
+    "</div>\n",
+    "\n",
     "### 2.3 - Running a RAG Pipeline with Morpheus\n",
     "\n",
     "How do we utilize the Vector Database to answer questions?\n",
@@ -1670,7 +1672,7 @@
     "    start_time = time.time()\n",
     "\n",
     "    with log_time(print, count=count, msg=\"Executing {count} CVE(s). Total: {duration} ms, Average: {ms_per_count} ms\"):\n",
-    "        await run_cve_pipeline(pipeline_config, non_verbose_config, [cves[0]])\n",
+    "        await run_cve_pipeline(pipeline_config, non_verbose_config, [cves[0]]*count)\n",
     "\n",
     "    execution_times[count] = time.time() - start_time\n",
     "\n",
@@ -1847,6 +1849,12 @@
     "      ![Terminal and Notebook Side by Side](./images/side_by_side.png)\n",
     "5. To stop the microservice, interrupt the kernel by pressing the stop button in the toolbar\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fbe6e684",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
