--- a/examples/cyber_dev_day/notebooks/cyber-dev-day.ipynb
+++ b/examples/cyber_dev_day/notebooks/cyber-dev-day.ipynb
@@ -315,7 +315,7 @@
     "# TODO: Do we remove the filled out section here?\n",
     "conn.generate(\n",
     "    prompt=\"In general, how can I determine if my specific environment is affected by a CVE?\",\n",
-    "    model=\"gpt-43b-002\",\n",
+    "    model=\"llama-2-70b-hf\",\n",
     "    tokens_to_generate=128,\n",
     "    temperature=0,\n",
     "    return_type=\"text\",\n",
@@ -934,6 +934,10 @@
    "id": "0afdc87a",
    "metadata": {},
    "source": [
+    "<div class=\"alert alert-block alert-warning\">\n",
+    "<b>Note:</b> Please wait here until instructed to continue with running the notebook.\n",
+    "</div>\n",
+    "\n",
     "## 2 - Prototyping\n",
     "\n",
     "Now that we have the task generation for this workflow ready, how can we automate getting the answers for our checklist items?\n",
@@ -1363,6 +1367,10 @@
    "id": "9e8c30da",
    "metadata": {},
    "source": [
+    "<div class=\"alert alert-block alert-warning\">\n",
+    "<b>Note:</b> Please wait here until instructed to continue with running the notebook.\n",
+    "</div>\n",
+    "\n",
     "## 3 - Beyond Prototyping\n",
     "\n",
     "Up until now, we have been using the pipeline we built to answer questions about the code in the repository. While this works for a few hand picked use cases, it is not suitable to deploy into a production environment for several reasons:\n",
@@ -1672,7 +1680,7 @@
     "    start_time = time.time()\n",
     "\n",
     "    with log_time(print, count=count, msg=\"Executing {count} CVE(s). Total: {duration} ms, Average: {ms_per_count} ms\"):\n",
-    "        await run_cve_pipeline(pipeline_config, non_verbose_config, [cves[0]]*count)\n",
+    "        await run_cve_pipeline(pipeline_config, non_verbose_config, [cves[0]] * count)\n",
     "\n",
     "    execution_times[count] = time.time() - start_time\n",
     "\n",
