Since there is only one sub-item under each numbered-item, just make them bullet points

--- a/examples/cyber_dev_day/notebooks/cyber-dev-day.ipynb
+++ b/examples/cyber_dev_day/notebooks/cyber-dev-day.ipynb
@@ -1372,11 +1372,11 @@
     "Up until now, we have been using the pipeline we built to answer questions about the code in the repository. While this works for a few hand picked use cases, it is not suitable to deploy into a production environment for several reasons:\n",
     "\n",
     "1. The LLM models fail to work on some questions which can generate errors in the pipeline\n",
-    "   1. Since the pipeline chains many LLM calls together, a single error can cause the entire pipeline to fail. For a production environment, we would need to handle these errors more gracefully or improve the model to reduce the number of errors.\n",
+    "   * Since the pipeline chains many LLM calls together, a single error can cause the entire pipeline to fail. For a production environment, we would need to handle these errors more gracefully or improve the model to reduce the number of errors.\n",
     "2. The pipeline is not optimized for performance\n",
-    "   1. The pipeline is slow to run, because each model needs to be executed sequentially. For a production environment, we would need to optimize the pipeline handle multiple requests at once.\n",
+    "   * The pipeline is slow to run, because each model needs to be executed sequentially. For a production environment, we would need to optimize the pipeline handle multiple requests at once.\n",
     "3. The pipeline cannot be easily integrated into other systems\n",
-    "   1. The pipeline is a standalone script which reads from a single file and needs to be run manually. For a production environment, the pipeline would need to be integrated with other systems, such as a web server or a chatbot.\n",
+    "   * The pipeline is a standalone script which reads from a single file and needs to be run manually. For a production environment, the pipeline would need to be integrated with other systems, such as a web server or a chatbot.\n",
     "\n",
     "In this section, we will address each of the limitations we encountered in the previous section and discuss how we can overcome them utilizing NeMo and Morpheus.\n",
     "\n",
