Save logger.parent to a variable to avoid IDE warnings about logger.parent with a possible value of None

--- a/examples/cyber_dev_day/notebooks/cyber-dev-day.ipynb
+++ b/examples/cyber_dev_day/notebooks/cyber-dev-day.ipynb
@@ -1666,8 +1666,9 @@
     "non_verbose_config.agent.verbose = False\n",
     "\n",
     "# Disable the logger to make it easer to see the timings\n",
-    "saved_level = logger.parent.level\n",
-    "logger.parent.setLevel(logging.ERROR)\n",
+    "parent_logger: logging.Logger = logger.parent\n",
+    "saved_level = parent_logger.level\n",
+    "parent_logger.setLevel(logging.ERROR)\n",
     "\n",
     "execution_times: dict[int, float] = {}\n",
     "\n",
@@ -1680,7 +1681,7 @@
     "\n",
     "    execution_times[count] = time.time() - start_time\n",
     "\n",
-    "logger.parent.setLevel(saved_level)"
+    "parent_logger.setLevel(saved_level)"
    ]
   },
   {
