Fixing the agent chain and updating the notebook with the latest edits

--- a/examples/cyber_dev_day/notebooks/cyber-dev-day.ipynb
+++ b/examples/cyber_dev_day/notebooks/cyber-dev-day.ipynb
@@ -114,11 +114,7 @@
    "outputs": [],
    "source": [
     "# Ensure that the current environment is set up with API keys\n",
-    "required_env_vars = [\n",
-    "    \"MORPHEUS_ROOT\",\n",
-    "    \"NGC_API_KEY\",\n",
-    "    \"NVIDIA_API_KEY\",\n",
-    "]\n",
+    "required_env_vars = [\"MORPHEUS_ROOT\", \"NGC_API_KEY\", \"NVIDIA_API_KEY\"]\n",
     "\n",
     "if (not all([var in os.environ for var in required_env_vars])):\n",
     "\n",
@@ -453,7 +449,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "be6dcba4-4e4b-4dd4-8c46-5eb7f767385b",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "prompt_template = \"\"\"Generate a checklist for a security analyst to use when assessing the exploitability of a specific CVE within a containerized environment. \\\n",
@@ -507,7 +505,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "57d6751c",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "models_to_try = ['gpt5b', 'gpt-8b-000', 'gpt20b', 'gpt-43b-002', 'llama-2-70b-hf']\n",
@@ -1132,14 +1132,16 @@
     "    # The responses are quite long, when debug is enabled disable the truncation that pandas and cudf normally\n",
     "    # perform on the output\n",
     "    pd.set_option('display.max_colwidth', None)\n",
-    "    print(\"Response:\\n%s\" % (responses['response'].iloc[0], ))"
+    "    logger.info(\"Response:\\n%s\" % (responses['response'].iloc[0], ))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "dd9f1092",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "model_config = NVFoundationLLMModelConfig.model_validate({\n",
@@ -1168,7 +1170,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "506b5fb3",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# Run the Pipeline\n",
@@ -1248,7 +1252,7 @@
     "\n",
     "    logger.info(\"Pipeline complete\")\n",
     "\n",
-    "    logger.info(\"Pipeline complete. Received %s responses:\\n%s\", len(messages), responses['response'])"
+    "    logger.info(\"Received %s responses:\\n%s\", len(messages), responses[[\"checklist\", \"response\"]].to_json(indent=2))"
    ]
   },
   {
@@ -1334,10 +1338,19 @@
    },
    "outputs": [],
    "source": [
+    "cve_details = \"\"\"\n",
+    "Deserialization of untrusted data in IPC and Parquet readers in PyArrow versions 0.14.0 to 14.0.0 allows arbitrary code\n",
+    "execution. An application is vulnerable if it reads Arrow IPC, Feather or Parquet data from untrusted sources\n",
+    "(for example user-supplied input files). This vulnerability only affects PyArrow, not other Apache Arrow\n",
+    "implementations or bindings. It is recommended that users of PyArrow upgrade to 14.0.1. Similarly, it is recommended\n",
+    "that downstream libraries upgrade their dependency requirements to PyArrow 14.0.1 or later. PyPI packages are already\n",
+    "available, and we hope that conda-forge packages will be available soon. If it is not possible to upgrade, we provide\n",
+    "a separate package `pyarrow-hotfix` that disables the vulnerability on older PyArrow versions.\n",
+    "See https://pypi.org/project/pyarrow-hotfix/ for instructions.\n",
+    "\"\"\"\n",
+    "\n",
     "# Now run the pipeline with a specified CVE description\n",
-    "await run_cve_pipeline(pipeline_config, engine_config, [\n",
-    "    \"An issue was discovered in the Linux kernel through 6.0.9. drivers/media/dvb-core/dvbdev.c has a use-after-free, related to dvb_register_device dynamically allocating fops.\"\n",
-    "])"
+    "await run_cve_pipeline(pipeline_config, engine_config, [cve_details])"
    ]
   },
   {
@@ -1429,7 +1442,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "14ecf15b-e1e4-43db-9aca-6578211469aa",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "formatted_prompt = few_shot_prompt_template.format(**LOG4J_CVE_INTEL)\n",
@@ -1550,7 +1565,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "f9955693-e9dd-4352-b981-7dce927d1af7",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "formatted_prompt = few_shot_prompt_template.format(**LOG4J_CVE_INTEL)\n",
@@ -1571,7 +1588,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "f91ef4fe",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# Code for improving the model\n",
@@ -1614,7 +1633,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "895f9bcf",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# Create multiple CVE requests\n",
@@ -1660,7 +1681,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "b1f51590",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "from morpheus.utils.logging_timer import log_time\n",
@@ -1707,7 +1730,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "e84b6723",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# importing matplotlib module\n",
@@ -1745,7 +1770,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "ca8d4182",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# Code for creating a microservice\n",
@@ -1801,7 +1828,7 @@
     "\n",
     "    logger.info(\"Pipeline complete\")\n",
     "\n",
-    "    logger.info(\"Pipeline complete. Received %s responses:\\n%s\", len(messages), responses['response'])"
+    "    logger.info(\"Received %s responses:\\n%s\", len(messages), responses[[\"checklist\", \"response\"]].to_json(indent=2))"
    ]
   },
   {
@@ -1820,7 +1847,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "f4f87ac9",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "await run_cve_pipeline_microservice(pipeline_config, engine_config_custom_model)"
